examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__scientific_notation_floats.snap
---
source: src/tests/corpus/literals.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 5,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 7,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 9,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 11,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 36,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 7,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 6,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 5,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Float(
                    Float {
                        _range: Range {
                            start_byte: 1,
                            end_byte: 6,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 5,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 4,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 7,
                        end_byte: 11,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 4,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Float(
                    Float {
                        _range: Range {
                            start_byte: 7,
                            end_byte: 11,
                            start_point: Point {
                                row: 2,
                                column: 0,
                            },
                            end_point: Point {
                                row: 2,
                                column: 4,
                            },
                        },
                        _id: 4,
                        _parent: Some(
                            3,
                        ),
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 6,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 12,
                        end_byte: 16,
                        start_point: Point {
                            row: 3,
                            column: 0,
                        },
                        end_point: Point {
                            row: 3,
                            column: 4,
                        },
                    },
                    _id: 5,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Float(
                    Float {
                        _range: Range {
                            start_byte: 12,
                            end_byte: 16,
                            start_point: Point {
                                row: 3,
                                column: 0,
                            },
                            end_point: Point {
                                row: 3,
                                column: 4,
                            },
                        },
                        _id: 6,
                        _parent: Some(
                            5,
                        ),
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 8,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 17,
                        end_byte: 23,
                        start_point: Point {
                            row: 4,
                            column: 0,
                        },
                        end_point: Point {
                            row: 4,
                            column: 6,
                        },
                    },
                    _id: 7,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Float(
                    Float {
                        _range: Range {
                            start_byte: 17,
                            end_byte: 23,
                            start_point: Point {
                                row: 4,
                                column: 0,
                            },
                            end_point: Point {
                                row: 4,
                                column: 6,
                            },
                        },
                        _id: 8,
                        _parent: Some(
                            7,
                        ),
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 10,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 24,
                        end_byte: 29,
                        start_point: Point {
                            row: 5,
                            column: 0,
                        },
                        end_point: Point {
                            row: 5,
                            column: 5,
                        },
                    },
                    _id: 9,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Float(
                    Float {
                        _range: Range {
                            start_byte: 24,
                            end_byte: 29,
                            start_point: Point {
                                row: 5,
                                column: 0,
                            },
                            end_point: Point {
                                row: 5,
                                column: 5,
                            },
                        },
                        _id: 10,
                        _parent: Some(
                            9,
                        ),
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 12,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 30,
                        end_byte: 35,
                        start_point: Point {
                            row: 6,
                            column: 0,
                        },
                        end_point: Point {
                            row: 6,
                            column: 5,
                        },
                    },
                    _id: 11,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                UnaryOperator(
                    UnaryOperator {
                        operator: AstNodeId {
                            id: 13,
                            _marker: PhantomData<ast_python::generated::Operators_4>,
                        },
                        argument: AstNodeId {
                            id: 14,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        _range: Range {
                            start_byte: 30,
                            end_byte: 35,
                            start_point: Point {
                                row: 6,
                                column: 0,
                            },
                            end_point: Point {
                                row: 6,
                                column: 5,
                            },
                        },
                        _id: 12,
                        _parent: Some(
                            11,
                        ),
                    },
                ),
            ),
        ),
        Token_Minus(
            Token_Minus {
                _range: Range {
                    start_byte: 30,
                    end_byte: 31,
                    start_point: Point {
                        row: 6,
                        column: 0,
                    },
                    end_point: Point {
                        row: 6,
                        column: 1,
                    },
                },
                _id: 13,
                _parent: Some(
                    12,
                ),
            },
        ),
        Float(
            Float {
                _range: Range {
                    start_byte: 31,
                    end_byte: 35,
                    start_point: Point {
                        row: 6,
                        column: 1,
                    },
                    end_point: Point {
                        row: 6,
                        column: 5,
                    },
                },
                _id: 14,
                _parent: Some(
                    12,
                ),
            },
        ),
    ],
}
